fixed letter overflowing on mobile

--- a/style/main.less
+++ b/style/main.less
@@ -68,13 +68,13 @@ body {
 
 #letter {
   width: 88%;
-  height: 75%;
+  height: 20%;
   transition: all ease-in-out .3s;
   background-color: aliceblue;
   border-radius: 5px;
 
   position: fixed !important;
-  bottom: 0;
+  top: 0;
   margin-inline: 6%;
 }
 
